# qcrypt-scan

./: .gitignore  CHANGELOG.md  README.md  action.yml  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-27-qcrypt-bench.md  2026-03-27-qcrypt-scan-implementation.md  2026-04-02-pqc-readiness-scoring.md
docs/superpowers/specs/: 2026-03-27-qcrypt-scan-design.md  2026-03-29-multi-project-dashboard-design.md  2026-04-02-pqc-readiness-scoring-design.md
python/: pyproject.toml
src/: cli.ts  index.ts  types.ts
src/analyzers/: context.ts  migration.ts
src/api/: server.ts
src/benchmarks/: encrypt-decrypt.ts  keygen.ts  runner.ts
src/education/: comparisons.ts
src/migrate/: index.ts  types.ts
src/migrate/reporters/: json.ts  markdown.ts
src/migrate/steps/: code-examples.ts  (+1 more)
src/reporters/: json.ts  sarif.ts
src/rules/: patterns.ts
src/scanners/: certificates.ts  config-files.ts  dependencies.ts  source-code.ts
test/: index.test.ts  types.test.ts
test/analyzers/: context.test.ts  migration.test.ts
test/benchmarks/: encrypt-decrypt.test.ts  keygen.test.ts  runner.test.ts
test/e2e/: migrate-api.test.ts
test/education/: comparisons.test.ts
test/migrate/: fixtures.ts  index.test.ts  types.test.ts
test/reporters/: json.test.ts  sarif.test.ts
test/rules/: patterns.test.ts
test/scanners/: certificates.test.ts  config-files.test.ts  dependencies.test.ts  source-code.test.ts
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: api.ts  main.tsx
(+23 files in other folders)
